add dependency for app

--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@angular/platform-browser": "~9.0.1",
     "@angular/platform-browser-dynamic": "~9.0.1",
     "@angular/router": "~9.0.1",
-    "@ngrx/store": "^14.3.1",
+    "@ngrx/store": "^8.6.0",
+    "@ngrx/store-devtools": "^8.6.1",
+    "chart.js": "^2.9.3",
     "firebase": "^8.10.1",
+    "ng2-charts": "^2.3.0",
     "rxjs": "~6.5.4",
     "sweetalert2": "^11.4.33",
     "tslib": "^1.10.0",
